--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- Pie de página -->
   <footer>
-    <p>© 2025 E&E MATH GAMES</p>
+    <p>© 2025 Esther&Emmileny MATH GAMES</p>
     <div class="controles">
       <button onclick="location.reload()">Inicio</button>
       <button onclick="window.close()">Salir</button>
